Redesigned project folder structure.
Signed-off-by: Paulo Pires <pjpires@gmail.com>